Mini update CSS, FIX overflow-x
Coloquei um overflow-x no corpo normal, pois com a adição de algumas divs a responsividade acabou tendo alguns problemas... Principalmente com o menu.

O overflow-x está regrando que qualquer coisa que sair pra fora do documento no seu eixo (sendo y vertical, x horizontal e z profundidade), não irá aparecer.

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -7,6 +7,7 @@
 
 body{
    background-color: transparent; 
+   overflow-x: hidden;
 }
 
 a{
@@ -122,11 +123,3 @@ nav{
 
 /** --------------- CORPO --------------- **/
 
-#content{
-    background-color: red;
-
-    width: 100%;
-    margin-top: 2rem;
-
-    display: flex;
-}
